styles/style.css
* {
    margin: 0;
    padding: 0;
    font-family: "Inter", sans-serif;
}

nav {
    display: flex;
    justify-content: space-between;
    max-width: 1200px;
    margin: auto;
    padding: 16px 24px;
    align-items: center;
}

nav img {
    height: 32px;
    display: block;
}

.navigation {
    display: flex;
    list-style: none;
    gap: 32px;
}

.navigation li a {
    text-decoration: none;
    color: #6d6d6d;
    font-size: 14px;
    font-weight: 500;
}

.navigation li a:hover {
    color: #000000;
}

.register-button {
    background-color: #2f4bf5;
    color: #ffffff;
    border: none;
    font-size: 14px;
    font-weight: 600;
    padding: 10px 20px;
    border-radius: 6px;
    cursor: pointer;
}

.register-button:hover {
    background-color: #0019a9;
}

